# wyatt

./: .~lock.edgar_output.xlsx#  README.md  edgar_output.xlsx  edgar_scraper.py  pyproject.toml  stock_scraper.py  tickers.txt  yfinance_output.xlsx
